# aoc

./: LICENSE.txt  README.md  TODO.md  aoc.opam  dune-project
lib/: dispatcher.ml  dune  edit_dispatcher.ml  edit_dispatcher.mli  format.ml  generate_solution.ml  generate_solution.mli  http.ml  http.mli  input.ml  input.mli  puzzle.ml  puzzle.mli  run.ml  scaffold.ml  scaffold.mli
scripts/: dispatcher.ml
solutions/: dispatcher.ml  dune  y2024d01.ml  y2024d02.ml  y2024d03.ml  y2024d05.ml
test/: dune
