(lang dune 3.20)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "rhdCode0x7C3 <rhdCode0x7C3@icloud.com>")

(maintainers "rhdCode0x7C3 <rhdCode0x7C3@icloud.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "Advent of Code puzzle engine")
 (description "Advent of Code puzzle engine")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
